fix(web-components): add css styling for ic-card icons when displayed in high contrast mode
Fix issue where icons in ic-card don't take on the right colour in high contrast mode. Fix issue
where disabled and non-clickable ic-cards don't use the correct border colour in high contrast mode

. #1139

--- a/packages/web-components/src/components/ic-card/ic-card.css
+++ b/packages/web-components/src/components/ic-card/ic-card.css
@@ -178,3 +178,24 @@ button {
 .expanded-content {
   margin-top: var(--ic-space-md);
 }
+
+/** High Contrast **/
+@media (forced-colors: active) {
+  .card ::slotted(svg) {
+    fill: currentcolor;
+  }
+
+  .card.disabled ::slotted(svg) {
+    fill: GrayText !important;
+  }
+
+  .card.disabled {
+    border-color: GrayText !important;
+  }
+
+  .card.disabled .card-message,
+  .card.disabled .subheading,
+  .card.disabled .card-title {
+    color: GrayText;
+  }
+}
